--- a/drp_internet/core.css
+++ b/drp_internet/core.css
@@ -48,23 +48,46 @@ a:visited {
 }
 
 .previous {
-  font-size: 25px;
   top: 18%;
   position: relative;
   left: 3%;
-  background-color: rgb(129, 129, 129);
-  border: 2px black solid;
+  border: 2px solid black;
   border-radius: 50%;
-}
 
+}
+.wrapper{
+  top: 25%;
+  position: absolute;
+  width: 85px;
+  margin: auto;
+  text-align: center;
+  left: 5%;
+}
 .next {
-  font-size: 25px;
   top: 18%;
   position: relative;
   left: 3.5%;
-  background-color: rgb(129, 129, 129);
-  border: 2px black solid;
+  border: 2px solid black;
   border-radius: 50%;
+}
+.hover {
+  position: relative;
+}
+.hover:hover{
+  border: 2px solid rgb(196, 196, 196);
+}
+.exitbtn{
+  position: relative;
+  left: 90%;
+  top:20%;
+  border-radius: 10%;
+  -webkit-filter: invert(100%); /* Safari/Chrome */
+  filter: invert(100%);
+  border: 2px solid rgb(255, 255, 255);
+  background-color: rgb(0, 183, 255);
+}
+.exitbtn:hover{
+  border: 2px solid black;
 }
 .link {
   position: relative;
@@ -75,15 +98,6 @@ a:visited {
   left: 43.2%;
   width: 250px;
   text-decoration: underline;
-}
-.exit {
-  background-color: rgb(129, 129, 129);
-  font-size: 20px;
-  top: 0%;
-  left: 50%;
-  position: relative;
-  border: 2px solid black;
-  display: inline-block;
 }
 
 .container {
@@ -286,37 +300,44 @@ p {
 }
 .frame-sponsored .dealership{
   position: relative;
-  background-color: #fc0000;
+  background-image: url('img/ads/OnEarth.png');
+  background-position: center;
+
   width: 315px;
   height: 138px;
   margin:auto;
 }
 .frame-sponsored .appartments{
   position: relative;
-  background-color: #fc0000;
+  background-image: url('img/ads/Legendary.png');
+  background-position: center;
   width: 315px;
   height: 138px;
   margin:auto;
 }
-.frame-sponsored .magazin{
+.frame-sponsored .banksp{
   position: relative;
-  background-color: #fc0000;
+  background-image: url('img/ads/bank.png');
+  background-position: center;
+  background-size: cover;
   width: 315px;
   height: 138px;
   margin:auto;
 }
 .content{
-  top: -1%;
+  top: -2%;
   margin: auto;
-  width: 60%;
+  width: 70%;
   position: relative;
-  height: 33.5%;
+  height: 34.5%;
   overflow: hidden;
   text-align: center;
-}
+  background-color: rgba(128, 128, 128, 0.301);
+  border: 2px solid rgb(221, 193, 31);
 
+}
 .ad{
-  left: 9px;
+  left: 40px;
   background-color:  rgb(2, 111, 173);
   position: relative;
   width: 310px;
@@ -324,10 +345,16 @@ p {
   color: white;
   font-size: 13px;
   display: inline-block;
-  margin-right:3%;
-  margin-bottom: 1.5%;
+  margin-right:6%;
+  margin-bottom: 2.2%;
+  background-position: center;
+  background-size: cover;
+  border: 2px double black;
+  top: 2%;
 }
 .ad:hover{
-  background-color: rgb(4, 60, 92);
+
+  background-repeat: no-repeat;
+  border: 2px solid rgb(6, 80, 190);
 }
 
