--- a/drp_internet/html/flecca/main.css
+++ b/drp_internet/html/flecca/main.css
@@ -86,6 +86,7 @@ a:visited {
 }
 .exitbtn:hover {
   border: 2px solid black;
+  animation: all 100ms linear;
 }
 .link {
   position: absolute;
@@ -105,11 +106,13 @@ a:visited {
   z-index: 30;
   margin-top: 3.5%;
 }
+
 .loading-bar {
   width: 1%;
   height: 8px;
   background-color: green;
 }
+
 .page-container {
   position: relative;
   margin: auto;
@@ -117,12 +120,14 @@ a:visited {
   height: 100vh;
   background-color: rgb(250, 250, 250);
 }
+
 .logo-container {
   position: relative;
   width: 100%;
   height: 25%;
   background-color: rgba(255, 0, 0, 0);
 }
+
 .logo {
   position: relative;
   top: 40%;
@@ -131,6 +136,7 @@ a:visited {
   background-color: transparent;
   left: 3%;
 }
+
 .fadingshit {
   width: 100%;
   height: 5px;
@@ -145,7 +151,69 @@ a:visited {
   );
 }
 
-h1 {
+.replace{
+  position: relative;
+  background-color: transparent;
+  width: 100%;
+  height: 60%;
+  display: block;
+  top:-10%;
+}
+
+.wlcm {
+  position: relative;
   text-align: center;
-  margin-top: 10%;
+  margin-top: 17%;
+}
+
+.btn{
+  text-align: center;
+  position: relative;
+  display: block;
+  width: 380px;
+  font-size: 30px;
+  color: white;
+  background-color: green;
+  height: 100px;
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
+.btn:hover{
+  background-color: rgb(2, 156, 2);
+  transition: all 70ms linear;
+  border: 2.5px solid black;
+}
+.auth{
+  top:8%;
+  margin: 0 auto;
+}
+
+#replace1 h1{
+  position: relative;
+  text-align: center;
+  padding-top: 15%;
+  margin-bottom: 50px;
+}
+.deposit{
+  margin-bottom: 30px;
+  margin: 0 auto;
+}
+.withdraw{
+  top:10%;
+  margin: auto;
+}
+.logs{
+  top:20%;
+  margin: auto;
+}
+#log{
+  position: relative;
+  color: black;
+  left: 80%;
+}
+#logp{
+  left:80%;
+  position: relative;
+  color: black;
 }
