--- a/drp_internet/html/flecca/main.css
+++ b/drp_internet/html/flecca/main.css
@@ -150,7 +150,19 @@ a:visited {
     to(#fff)
   );
 }
-
+#back{
+  text-decoration: underline;
+  color: green;
+  position: absolute;
+  left:2%;
+  z-index: 50;
+  border: none;
+  font-size: 20px;
+  background-color: transparent;
+}
+#back:hover{
+  color: rgb(0, 90, 0);
+}
 .replace{
   position: relative;
   background-color: transparent;
@@ -163,7 +175,6 @@ a:visited {
 .wlcm {
   position: relative;
   text-align: center;
-  margin-top: 17%;
 }
 
 .btn{
@@ -189,7 +200,7 @@ a:visited {
   margin: 0 auto;
 }
 
-#replace1 h1{
+h1{
   position: relative;
   text-align: center;
   padding-top: 15%;
@@ -216,4 +227,28 @@ a:visited {
   left:80%;
   position: relative;
   color: black;
+  top:-2%;
 }
+#logp2{
+  left:80%;
+  position: relative;
+  color: black;
+  top:-4%;
+}
+.columns{
+  position: relative;
+  margin: auto;
+  column-count: 2;
+  width: 1000px;
+  height: 100%;
+  column-gap: 24%;
+}
+.left{
+  margin-bottom: 5%;
+}
+.right{
+  margin-bottom: 5%;
+}
+
+
+
