--- a/drp_internet/html/flecca/main.css
+++ b/drp_internet/html/flecca/main.css
@@ -250,5 +250,21 @@ h1{
   margin-bottom: 5%;
 }
 
+.input{
+  width: 40%;
+  position: relative;
+  left:30%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 3px solid rgba(0, 119, 0, 0.363);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+}
+.input:focus{
+  border-color: rgba(0, 134, 0, 0.699);
+}
 
 
